Databases have been added, still working on testing/getting them to work with the C server

--- a/GPSCatcher/AndroidManifest.xml
+++ b/GPSCatcher/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name="MainMenuActivity" />
         <activity android:name="MapViewActivity" />
         <activity android:name="ChangeActivity" />
+        <activity android:name="DbCheckActivity" />
         <uses-library android:name="com.google.android.maps" />
     </application>
 
