--- a/GPSCatcher/AndroidManifest.xml
+++ b/GPSCatcher/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="10" />
-<uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
@@ -22,7 +22,8 @@
         <activity android:name="MainMenuActivity" />
         <activity android:name="MapViewActivity" />
         <activity android:name="ChangeActivity" />
-        <activity android:name="DbCheckActivity" />
+        <activity android:name="CellCheckActivity" />
+        <activity android:name="GPSCheckActivity" />
         <uses-library android:name="com.google.android.maps" />
     </application>
 
